--- a/package.json
+++ b/package.json
@@ -9,8 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "11.6.0",
+    "@emotion/react": "11.7.0",
+    "@emotion/server": "11.4.0",
+    "@emotion/styled": "11.6.0",
+    "@mui/lab": "^5.0.0-alpha.65",
+    "@mui/material": "5.2.2",
+    "apexcharts": "^3.23.1",
+    "clsx": "1.1.1",
+    "feather-icons-react": "^0.5.0",
     "next": "12.1.6",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
