--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "apexcharts": "^3.23.1",
     "clsx": "1.1.1",
     "feather-icons-react": "^0.5.0",
-    "next": "12.1.6",
+    "next": "^12.1.6",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0"
