--- a/package.json
+++ b/package.json
@@ -16,12 +16,20 @@
     "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "5.2.2",
     "apexcharts": "^3.23.1",
+    "bcrypt": "^5.0.1",
     "clsx": "1.1.1",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.1",
     "feather-icons-react": "^0.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.1",
     "next": "^12.1.6",
+    "next-connect": "^0.12.2",
+    "otp-generator": "^4.0.0",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
