--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "feather-icons-react": "^0.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.1",
+    "multer": "^1.4.5-lts.1",
     "next": "^12.1.6",
     "next-connect": "^0.12.2",
     "otp-generator": "^4.0.0",
