--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "5.2.2",
     "apexcharts": "^3.23.1",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "clsx": "1.1.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "feather-icons-react": "^0.5.0",
+    "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.4.1",
     "multer": "^1.4.5-lts.1",
     "next": "^12.1.6",
@@ -30,6 +33,11 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
+    "react-toastify": "^9.0.5",
+    "redux": "4.1.2",
+    "redux-thunk": "^2.4.1",
+    "sweetalert": "^2.1.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
