--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "redux": "4.1.2",
     "redux-thunk": "^2.4.1",
     "sweetalert": "^2.1.2",
+    "timeago.js": "^4.0.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
