--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "11.7.0",
     "@emotion/server": "11.4.0",
     "@emotion/styled": "11.6.0",
+    "@hookform/resolvers": "^2.9.3",
     "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "5.2.2",
     "apexcharts": "^3.23.1",
@@ -33,13 +34,15 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
     "react-redux": "^8.0.2",
     "react-toastify": "^9.0.5",
     "redux": "4.1.2",
     "redux-thunk": "^2.4.1",
     "sweetalert": "^2.1.2",
     "timeago.js": "^4.0.2",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
