--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "^12.1.6",
     "next-connect": "^0.12.2",
+    "nodemailer": "^6.7.6",
     "otp-generator": "^4.0.0",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
